--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -24,7 +24,7 @@
 <!-- Header section -->
 
 
-<header >
+<header container>
   <div class="header-container">
     <div class="logo-section">
       
