--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -24,7 +24,7 @@
 <!-- Header section -->
 
 
-<header container>
+<header class="container">
   <div class="header-container">
     <div class="logo-section">
       
@@ -65,7 +65,7 @@
 
 <!-- Mobile MENU -->
 
-<div class="menu-container js-menu-container container" id="mobile-menu">
+<div class="menu-container js-menu-container" id="mobile-menu">
   <div class="mob-logo-section">
     <img src="./images/logo/favicon.svg" alt="Boat" width="18" height="18">
     <a href="./index.html">
