--- a/src/css/header.css
+++ b/src/css/header.css
@@ -88,7 +88,7 @@
     align-items: center;
     gap: 269px;
     margin-top: 32px;
-    margin-left: 32px;
+    
   }
 
   .logo-section {
@@ -123,7 +123,7 @@
     align-items: center;
     gap: 781px;
     margin-top: 32px;
-    margin-left: 32px;
+    
   }
 
   .logo-section {
@@ -160,7 +160,9 @@
 
 .menu-container {
     width: 100%;
-      height: 100%;
+    height: 100%;
+    width: 100vw;
+    height: 100vh;
  
   position: fixed;
   top: 0;
