--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -69,9 +69,11 @@
     </div>
   </div>
   <div class="container_vnizu_stranici">
-    <ul class="spisok_vnizu_stranici">
-      <p class="tekst_vnizu_stranici">2023. Yacht Adventures</p>
-      <p class="tekst_vnizu_stranici">Privacy Policy</p>
+    <ul>
+      <li class="spisok_vnizu_stranici">
+        <p class="tekst_vnizu_stranici">2023. Yacht Adventures</p>
+        <p class="tekst_vnizu_stranici">Privacy Policy</p>
+      </li>
     </ul>
   </div>
 </footer>
