--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -166,7 +166,6 @@ gap: 14px;
     .social_media_link {
         fill: white;
     }
-
     .tekst_vnizu_stranici {
             color: rgba(246, 245, 239, 0.50);
             text-align: center;
@@ -217,6 +216,8 @@ gap: 14px;
     fill: white;
 }
 
+
+
 .logo_and_title {
     display: flex;
 }
@@ -249,6 +250,8 @@ gap: 14px;
     right: 225px;
 }
 
-
-
+.social_media_link:hover {fill: green;}
+.social_media_link:focus {
+    fill: var(--linear-green);
+}
 
