--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -107,6 +107,10 @@ gap: 14px;
         stroke-width: 1px;
         stroke: rgba(246, 245, 239, 0.50);
         fill: var(--white);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
     }
 
     .tekst_vnizu_stranici_container {
@@ -165,6 +169,11 @@ gap: 14px;
     }
     .social_media_link {
         fill: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .tekst_vnizu_stranici {
             color: rgba(246, 245, 239, 0.50);
@@ -210,10 +219,11 @@ gap: 14px;
     border: 1px solid rgba(246, 245, 239, 0.50);
     width: 32px;
     height: 32px;
-    padding: 7.2px;
+    /* padding: 7.2px; */
     justify-content: center;
     align-items: center;
     fill: white;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -250,8 +260,11 @@ gap: 14px;
     right: 225px;
 }
 
-.social_media_link:hover {fill: green;}
+.social_media_link:hover, 
 .social_media_link:focus {
-    fill: var(--linear-green);
+    fill: #BEC7C2;
 }
 
+.ramka:hover{
+    fill: #BEC7C2;
+}
