--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,146 +1,50 @@
 <!-- Marta Bahrynivska -->
 
-<section class="hero-section">
-  <div class="container">
-    <div class="hero-blur-one hero-blur"></div>
-    <div class="hero-blur-two hero-blur"></div>
-    <div class="hero-blur-three hero-blur"></div>
-    <div class="images-title-container">
-
-    <!-- Images part -->
-    <div class="hero-images">
-      <ul class="hero-clients-images-list">
-        <div class="clients-container">
-          <li class="hero-first-person">
-            <source srcset="
-                  ./img/hero-images/desktop-first-man@1x-min.png 1x,
-                  ./img/hero-images/desktop-first-man@2x-min.png 2x
-                  " media="(min-width: 1280px)" type="image/png" />
-               
-              <!-- <source srcset="
-                      ./img/services/diving_tab_1x.png 1x,
-                      ./img/services/diving_tab_2x.png 2x
-                    " media="(min-width: 768px)" type="image/png" />
-          
-              <source srcset="
-                      ./img/services/diving_mob_1x.png 1x,
-                      ./img/services/diving_mob_2x.png 2x
-                    " media="(min-width: 375px)" type="image/png" /> -->
-          
-              <img class="first-person" src="./img/hero-images/desktop-first-man@1x-min.png"
-                alt="First client middle-aged man" />
-            </picture>
-          </li>
-    <li class="hero-second-person">
-      <source srcset="
-                      ./img/hero-images/desktop-second-person@1x-min.png 1x,
-                      ./img/hero-images/desktop-second-person@2x-min.png 2x
-                      " media="(min-width: 1280px)" type="image/png" />
-    
-      <!-- <source srcset="
-                          ./img/services/diving_tab_1x.png 1x,
-                          ./img/services/diving_tab_2x.png 2x
-                        " media="(min-width: 768px)" type="image/png" />
-              
-                  <source srcset="
-                          ./img/services/diving_mob_1x.png 1x,
-                          ./img/services/diving_mob_2x.png 2x
-                        " media="(min-width: 375px)" type="image/png" /> -->
-    
-      <img class="second-person" src="./img/hero-images/desktop-second-person@1x-min.png" alt="Second client middle-aged woman" />
-      </picture>
-      </li>
-      <li class="hero-third-person">
-        <source srcset="
-                            ./img/hero-images/desktop-third-person@1x-min.png 1x,
-                            ./img/hero-images/desktop-third-person@2x-min.png 2x
-                            " media="(min-width: 1280px)" type="image/png" />
-      
-        <!-- <source srcset="
-                                ./img/services/diving_tab_1x.png 1x,
-                                ./img/services/diving_tab_2x.png 2x
-                              " media="(min-width: 768px)" type="image/png" />
-                    
-                        <source srcset="
-                                ./img/services/diving_mob_1x.png 1x,
-                                ./img/services/diving_mob_2x.png 2x
-                              " media="(min-width: 375px)" type="image/png" /> -->
-      
-        <img class="third-person" src="./img/hero-images/desktop-third-person@1x-min.png"
-          alt="Third client middle-aged man" />
-        </picture>
-        </li>
-        </div>
-        <p class="clients-text">Our Clients</p>
-        <li class="man-image">
-          <source srcset="
-                                    ./img/hero-images/desktop-man@1x-min.png 1x,
-                                    ./img/hero-images/desktop-man@2x-min.png 2x
-                                    " media="(min-width: 1280px)" type="image/png" />
-        
-          <!-- <source srcset="
-                                        ./img/services/diving_tab_1x.png 1x,
-                                        ./img/services/diving_tab_2x.png 2x
-                                      " media="(min-width: 768px)" type="image/png" />
-                             -->
-          <source srcset="
-                                        ./img/hero-images/man-sunglasses-mobile@1x-min.png 1x,
-                                        ./img/hero-images/man-sunglasses-mobile@2x-min.png 2x
-                                      " media="(min-width: 375px)" type="image/png" />
-        
-          <img class="man-sunglasses" src="./img/hero-images/desktop-man@1x-min.png"
-            alt="Man wearing sunglasses and striped shirt" />
-          </picture>
-          </li>
-
-          <li class="yacht-image">
-            <source srcset="
-                                    ./img/hero-images/desktop-yacht@1x-min.png 1x,
-                                    ./img/hero-images/desktop-yacht@2x-min.png 2x
-                                    " media="(min-width: 1280px)" type="image/png" />
-          
-            <!-- <source srcset="
-                                                  ./img/services/diving_tab_1x.png 1x,
-                                                  ./img/services/diving_tab_2x.png 2x
-                                                " media="(min-width: 768px)" type="image/png" />
-                                      
-                                          <source srcset="
-                                                  ./img/services/diving_mob_1x.png 1x,
-                                                  ./img/services/diving_mob_2x.png 2x
-                                                " media="(min-width: 375px)" type="image/png" /> -->
-          
-            <img class="hero-yacht" src="./img/hero-images/desktop-yacht@1x-min.png"
-              alt="Modern comfortable fancy-looking yacht" />
-            </picture>
-            </li>
-            <div class="hero-image-text">
-              <p class="dollar-text">$12M</p>
-              <p class="book-now-text">Book now and make your dream yacht rental a reality</p>
-            </div>
+<section class="section hero-section">
+  <div class="container hero-container">
+      <div class="hero-text-block">
+        <p class="hero-text-title">
+          Explore the High Seas with 
+          <span class="hero-title-color">Our Luxury Yacht</span>  
+          Rentals
+        </p>
+        <p class="hero-text-desc">
+          Experience the freedom and luxury of yachting on the open seas. Choose from our top-of-the-line yachts and embark on an unforgettable journey surrounded by breathtaking views and state-of-the-art amenities.
+        </p>
+        <ul class="hero-btn-block list">
+          <li class="hero-btn"><button type="button" class="button hero-btn-start">Get Started</button></li>
+          <li class="hero-btn"><button type="button" class="button hero-btn-explore">Explore</button></li>
         </ul>
       </div>
-
-
-
-
-    <!-- Text part -->
-    <div class="text-button">
-    <div class="hero-title-container">
-    <h1 class="hero-title">Explore the High Seas with <span class="hero-accent">Our Luxury Yacht</span> Rentals</h1>
-    </div>
-    <div class="hero-text-container">
-    <p class="hero-text">Experience the freedom and luxury of yachting on the open seas. Choose from our top-of-the-line yachts and embark on an
-    unforgettable journey surrounded by breathtaking views and state-of-the-art amenities.</p>
-    </div>
-
-    <!-- Button part -->
-    <div class="button-container">
-      <button class="start-button button" type="button">Get Started</button>
-      <a href="./services-block.html">
-      <button class="explore-button button" type="button">Explore</button>
-      </a>
-    </div>
-    </div>
-    </div>
+      <div class="hero-image-block">
+        <div class="hero-clients-block">
+          <ul class="hero-clients-list">
+            <li class="hero-first-person hero-person">
+              <img class="first-person persone-img" src="./img/hero-images/desktop-first-man@1x-min.png"
+                  alt="First client middle-aged man" />
+            </li>
+            <li class="hero-second-person hero-person">
+              <img class="second-person persone-img" src="./img/hero-images/desktop-second-person@1x-min.png" alt="Second client middle-aged woman" />
+            </li>
+            <li class="hero-third-person hero-person">
+              <img class="third-person persone-img" src="./img/hero-images/desktop-third-person@1x-min.png"
+            alt="Third client middle-aged man" />
+            </li>
+          </ul>
+          <p class="hero-clients-text">Our Clients</p>
+        </div>
+        <div class="hero-man-block">
+          <img class="man-sunglasses" src="./img/hero-images/desktop-man@1x-min.png"
+          alt="Man wearing sunglasses and striped shirt" />
+        </div>
+        <div class="hero-yacht-block">
+          <img class="hero-yacht" src="./img/hero-images/desktop-yacht@1x-min.png"
+          alt="Modern comfortable fancy-looking yacht" />
+        </div>
+        <div class="hero-price-block">
+          <p class="hero-price-num">$12M</p>
+          <p class="hero-price-desc">Book now and make your dream yacht rental a reality</p>
+        </div>
+      </div>
   </div>
 </section>
