--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,11 +3,11 @@
 <section class="section hero-section">
   <div class="container hero-container">
       <div class="hero-text-block">
-        <p class="hero-text-title">
+        <h1 class="hero-text-title">
           Explore the High Seas with 
           <span class="hero-title-color">Our Luxury Yacht</span>  
           Rentals
-        </p>
+        </h1>
         <p class="hero-text-desc">
           Experience the freedom and luxury of yachting on the open seas. Choose from our top-of-the-line yachts and embark on an unforgettable journey surrounded by breathtaking views and state-of-the-art amenities.
         </p>
