--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -12,8 +12,12 @@
           Experience the freedom and luxury of yachting on the open seas. Choose from our top-of-the-line yachts and embark on an unforgettable journey surrounded by breathtaking views and state-of-the-art amenities.
         </p>
         <ul class="hero-btn-block list">
-          <li class="hero-btn"><button type="button" class="button hero-btn-start">Get Started</button></li>
-          <li class="hero-btn"><button type="button" class="button hero-btn-explore">Explore</button></li>
+          <li class="hero-btn">
+            <button type="button" class="button hero-btn-start">Get Started</button>
+          </li>
+          <li class="hero-btn">
+            <button type="button" class="button hero-btn-explore">Explore</button>
+          </li>
         </ul>
       </div>
       <div class="hero-image-block">
